# joplin-rag

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/joplin_rag/: adapter.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/notes/: etl.py  models.py  search.py  tasks.py  tests.py  urls.py  views.py
src/notes/migrations/: 0001_initial.py  0002_joplinupload_new_notes_count_and_more.py  0003_notemetadata_chunk_overlap_notemetadata_chunk_size.py
src/notes/templatetags/: markdown_filters.py
src/templates/: base.html
src/templates/account/: login.html  logout.html  signup.html
src/templates/notes/: search.html  upload.html
