[project]
name = "joplin-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.1",
    "dj-database-url>=3.0.1",
    "django>=5.0",
    "django-allauth>=65.13.1",
    "django-widget-tweaks>=1.5.1",
    "gunicorn>=23.0.0",
    "langchain>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.14.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "whitenoise>=6.11.0",
]
